@@ -1,3 +1,9 @@
+2008-04-28  Martin Lambers <marlam@marlam.de>
+
+	* src/pseudocolor_selector.h, src/pseudocolor_selector.cpp,
+	src/view_area.cpp: Use new invert option for pseudo coloring, to allow
+	using hue values in the opposite direction.
+
 2008-04-22  Martin Lambers <marlam@marlam.de>
 
 	* src/view_area.cpp, src/Makefile.am: Fix computation of the used
